[package]
name = "psharp"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
rustyline = "13"
indexmap = "2"
anyhow = "1"
thiserror = "1"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"

[profile.release]
opt-level = 3
lto = true
